fix(typo): fix usage of newer java